[package]
name = "mountain"
version = "0.1.0"
authors = ["Simon M. <git@simon.marache.net>"]
edition = "2018"

[dependencies]
sdl = { git = "https://github.com/Blizarre/rust-sdl.git" }
lodepng = "3.7.0"
rgb = "0.8.16"
toml = "0.7.4"
serde_derive = "1.0.106"
serde = "1.0.106"

[profile.release]
lto = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "draw"
harness = false
